-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.0
-
None
-
7da5842647f75fd990f69f400f75d9b090e39306 (qt/qtquickcontrols2/dev)
agent:2020/03/10 17:17:24 build.go:253: FAIL! : tst_customization::creation(incomplete:AbstractButton) Compared values are not the same agent:2020/03/10 17:17:24 build.go:253: Actual (control->objectName()): "abstractbutton-empty" agent:2020/03/10 17:17:24 build.go:253: Expected (controlName) : "abstractbutton-incomplete" agent:2020/03/10 17:17:24 build.go:253: Loc: [tst_customization.cpp(310)] agent:2020/03/10 17:17:24 build.go:253: FAIL! : tst_customization::creation(incomplete:ApplicationWindow) Compared values are not the same agent:2020/03/10 17:17:24 build.go:253: Actual (control->objectName()): "applicationwindow-empty" agent:2020/03/10 17:17:24 build.go:253: Expected (controlName) : "applicationwindow-incomplete" agent:2020/03/10 17:17:24 build.go:253: Loc: [tst_customization.cpp(310)] agent:2020/03/10 17:17:24 build.go:253: FAIL! : tst_customization::creation(incomplete:BusyIndicator) Compared values are not the same agent:2020/03/10 17:17:24 build.go:253: Actual (control->objectName()): "busyindicator-empty" agent:2020/03/10 17:17:24 build.go:253: Expected (controlName) : "busyindicator-incomplete" agent:2020/03/10 17:17:24 build.go:253: Loc: [tst_customization.cpp(310)]
https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/293444
- depends on
-
QTBUG-82774 qtquickcontrols2 doesn't build with latest qtdeclarative/qtbase dev
-
- Closed
-
For Gerrit Dashboard: QTBUG-82811 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
293613,5 | Adapt to plugin unloading changes | dev | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |