Adapt to plugin unloading changes

As of c2081016e in qtdeclarative, plugins are no longer unloaded on
macOS, and QQmlExtensionPlugin::unregisterTypes() should be used
instead.

This patch:
- Moves everything that was done in destructors to unregisterTypes().
- Ensures that the style selector is destroyed in
  QQuickStylePlugin::unregisterTypes() so that previous styles that
  were set do not stick around after qmlClearTypeRegistrations() is
  called. This ensures that runtime style-switching continues to work.
- Adds more logging output to make it easier to diagnose issues in the
  future.
- Adds more code comments to ease maintenance.

Change-Id: Ibbfeba4501d6ba0d5a257dcceace3498904a816e
Fixes: QTBUG-82811
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>